Kubernetes/17 TLS/files/6_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/send_timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  tls:
  - secretName: secret1
    hosts:
    - i.pm.cloudemo.eu
  rules:
   - host: i.pm.cloudemo.eu
     http:
      paths:
        - path: /
          backend:
            serviceName: tls-nginx
            servicePort: 80
